src/styles/pages/_grade.scss
.grade {
  @include setMinPageHeight($topbar-height);
  display: flex;
  flex-direction: column;

  &__top-container {
    display: flex;
    padding: 15px 20px;
    border-bottom: 1px solid black;

    &__sub-details {
      flex: 0 1 400px;

      display: grid;
      grid-template-columns: 1fr 3fr;
      grid-gap: 5px;

      &__grader-select {
        .md-icon-text {
          font-size: $font-size-normal;
        }

        .md-list--menu {
          min-width: 300px;
        }
      }

      &__cell {
        .md-select-field--btn {
          padding: 8px;
          height: 20px;

          .md-icon {
            &:hover {
              color: $brand-color;
            }
          }
        }

        .md-btn--icon {
          color: red;
          margin-left: 4px;
          @include icon-button(20px, 0px);
        }
        padding: 5px;
      }
    }

    &__sub-grade {
      flex: 1 1 0;
    }

    &__sub-finalize {
      flex: 0 1 150px;

      .positiveNegativeAlert {
        font-size: $font-size-normal;
        color: $mid-grey;
        font-style: italic;
        width: 350px;
        position: absolute;
        right: 10px;
        top: 110px;
        &--none {
          visibility: hidden;
        }
      }
    }
  }

  &__main-container {
    @include dual-pane-fixed-left(200, 'left-panel', 'right-panel');
    padding: 0px 0px 10px 0px;
    flex-grow: 1;

    &__left-panel {
      height: inherit;
      border-right: 2px solid $mid-grey;
    }

    &__right-panel {
      padding-top: 10px;
      &__tabs {
        width: inherit;
      }
    }

    &__tabContent {
      @media screen and (min-width: 1400px) {
        $commentPanel-width: calc(100vw - 1400px + 280px);
        @include dual-pane-fixed-right-scrollable-left($commentPanel-width, 'codePanel', 'commentPanel');
        padding-right: 0px;
      }
      @media screen and (max-width: 1400px) {
        @include dual-pane-fixed-right-scrollable-left(280px, 'codePanel', 'commentPanel');
        padding-right: 0px;
      }
      min-height: 80vh;

      &__commentPanel {
        padding-top: 20px;
        padding-left: 10px;
        border-left: 1px solid rgba(0, 0, 0, 0.2);
        border-top: 1px solid rgba(0, 0, 0, 0.2);
        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
        background-color: $very-light-green;
        z-index: 1;
      }
    }

    &__scrollIndicator {
      width: 30px;
      visibility: hidden;
      @media screen and (max-width: 1260px) {
        font-style: italic;
        color: $mid-grey;
        font-size: $font-size-normal;
        visibility: visible;
        position: relative;
        left: calc(100vw - 570px);
      }
    }
  }
}

